# acoustic-levitation-system-control

./: .gitignore  README.md  acoustic_pressure.m  ultrasonic_leviation.ino
control-app/: control-app.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp  style.css
phase-monitoring/phase-monitoring/: phase-monitoring.sln
phase-monitoring/phase-monitoring/phase-monitoring/: phase-monitoring.cpp
phase-monitoring/src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
